# LLM-Benchmark

./: .gitignore  CLAUDE.md  Dockerfile  README.md  Taskfile.yml  docker-compose.yml  pyproject.toml
data/examples/email_extraction/: config.json  config_mini.json  system_prompt.md
src/benchmark/: __main__.py  cli.py  config.py  evaluator.py  models.py  reporter.py  runner.py
src/benchmark/prompts/: evaluator_system_json.md  evaluator_system_text.md
src/benchmark/providers/: base.py  openrouter.py
src/benchmark/templates/: report.html
tasks/: helpers.yml
tests/: conftest.py  test_cli.py  test_evaluator.py  test_models.py  test_openrouter.py  test_reporter.py  test_runner.py
