[project]
name = "llm-benchmark"
version = "0.1.0"
description = "Generic LLM model benchmarking tool powered by OpenRouter"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
dependencies = [
    "jinja2>=3.1.6",
    "openai>=2.31.0",
    "pydantic>=2.13.1",
    "pydantic-settings>=2.8.1",
    "rich>=15.0.0",
]

[project.scripts]
benchmark = "benchmark.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-mock>=3.14"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/benchmark"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.format]
quote-style = "single"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::pytest.PytestCollectionWarning",
]
